--- a/Clojure/Clojure.Compile/Clojure.Compile.netcore.csproj
+++ b/Clojure/Clojure.Compile/Clojure.Compile.netcore.csproj
@@ -1,11 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <Version>1.9.0</Version>
     <AssemblyName>Clojure.Compile</AssemblyName>
     <RootNamespace>Clojure.Compile</RootNamespace>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <ApplicationIcon />
+    <OutputType>Exe</OutputType>
+    <StartupObject />
   </PropertyGroup>
 
   <ItemGroup>
